<resources>
    <string name="app_name">SmartCity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="userImg">UserPic</string>
    <string name="logoTitle">Smart City</string>
    <string name="app_id">516585361840740</string>
    <string name="grv">Grievance</string>
    <string name="info">Information</string>
    <string name="services">Services</string>
    <string name="idea">Ideas</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobnolabel">Enter Mobile Number</string>
    <string name="mobIconDesc">mobile icon</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="loginbtn">Login</string>
    <string name="actLabel">Enter 4 digit activation code</string>
    <string name="SMSActivationLabel">You will receive SMS with in </string>
    <string name="activationSubmitBtn">Submit</string>
    <string name="activationBtn">Regenerate</string>
    <string name="photocaption">Add your photo</string>
    <string name="namePlaceHoldr">Enter your name</string>
    <string name="mobNoPlcHoldr">Enter your mobile no.</string>
    <string name="emailPlcHoldr">Enter your email id</string>
    <string name="areaPlcHoldr">Enter your area</string>
    <string name="maleRadio">Male</string>
    <string name="femaleRadio">Female</string>
    <string name="registerBtn">Register</string>
    <string name="title_activity_new_dashboard">Smart City Bhubaneswar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_idea_registration">Post Ideas</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_type_pop_up">Complaint Types</string>
    <string name="backtext">Back</string>
    <string name="title_activity_catagory_idea">CatagoryIdeaActivity</string>
    <string name="title_activity_idea_comment">Comments</string>
    <string name="title_activity_city_champians">City Champians</string>
    <string name="title_activity_users">UsersActivity</string>


</resources>
