<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/cement"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.csm.userRegistration.RegistrationActivity"
        android:background="@color/cement">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/userimg"
            android:id="@+id/regdUserImg"
            android:contentDescription="@string/userImg"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:onClick="imageClick"
            android:clickable="true" />

        <com.csm.smartcity.common.CircularNetworkImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/userimg"
            android:id="@+id/regdNetworkUserImg"
            android:contentDescription="@string/userImg"
            android:layout_gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:onClick="imageClick"
            android:clickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/photocaption"
            android:id="@+id/photoLBL"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_gravity="right" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/regdName"
            android:hint="@string/namePlaceHoldr"
            android:layout_gravity="left"
            android:drawableLeft="@drawable/maleuser"
            android:drawablePadding="15dp"
            android:textSize="15sp"
            android:paddingLeft="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/regdMobNo"
            android:inputType="number"
            android:ems="10"
            android:maxLength="10"
            android:hint="@string/mobNoPlcHoldr"
            android:drawableLeft="@drawable/phoneicon"
            android:drawablePadding="15dp"
            android:textSize="15sp"
            android:paddingLeft="25dp"
            android:longClickable="false"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/regdEmail"
            android:layout_gravity="center_horizontal"
            android:hint="@string/emailPlcHoldr"
            android:drawableLeft="@drawable/emailicon"
            android:drawablePadding="15dp"
            android:textSize="15sp"
            android:paddingLeft="25dp" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/regdAreaAutoComplete"
            android:hint="@string/areaPlcHoldr"
            android:drawableLeft="@drawable/locationicon"
            android:drawablePadding="15dp"
            android:textSize="15sp"
            android:paddingLeft="25dp" />

        <RadioGroup
            android:id="@+id/radioGrp"
            android:layout_width="239dp"
            android:layout_height="59dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom">
            <RadioButton android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/maleRadio"
                />
            <RadioButton android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femaleRadio"
                />
        </RadioGroup>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/registerBtn"
            android:id="@+id/registerBtn"
            android:background="@color/green"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>
</ScrollView>
