<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.csm.mobLogin.LoginMobActivity"
    android:weightSum="1"
    android:background="@color/cement">



    <TextView android:text="@string/mobnolabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMobileNumber"
        android:layout_weight="0.04"
        android:textColor="@color/black" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textboxbackground"
        android:weightSum="1"
        android:elevation="4dp"
        android:layout_weight="0.06">

        <TextView
            android:layout_width="6dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView30"
            android:background="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/imageView5"
            android:background="@color/white"
            android:layout_gravity="center"
            android:src="@drawable/mobile"
            android:contentDescription="@string/mobIconDesc" />

        <TextView
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView31"
            android:background="@color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/mobNoEditText"
            android:maxLength="10"
            android:hint="@string/mobileNumber"
            android:textColorHint="@color/plcholdNo"
            android:textSize="15sp"
            android:background="@color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView29" />



    <Button
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:text="@string/loginbtn"
        android:id="@+id/loginBtn"
        android:onClick="mobValidationClick"
        android:background="#43A078"
        android:focusable="false"
        android:textColor="#ffffff"
        android:layout_marginTop="12dp"
        android:layout_gravity="center" />

</LinearLayout>

