<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">
<LinearLayout
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BHUBANESWAR"
                    android:id="@+id/textView"
                    android:layout_marginTop="10dp"
                    android:textColor="#8E8E8E"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SMART"
                    android:id="@+id/textView3"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="#89A54E"
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CITY"
                    android:id="@+id/textView4"
                    android:layout_marginTop="10dp"
                    android:textColor="#E57713"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="THE"
                    android:id="@+id/textView2"
                    android:textColor="#89A54E"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BIG"
                    android:id="@+id/textView5"
                    android:layout_marginLeft="5dp"
                    android:textColor="#E57713"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CONNECT"
                    android:id="@+id/textView6"
                    android:layout_marginLeft="5dp"
                    android:textColor="#679BDB"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="..."
                    android:id="@+id/textView7"
                    android:layout_marginLeft="5dp"
                    android:textColor="#679BDB"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!--<GridLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:rowCount="3"-->
        <!--android:columnCount="2"-->
        <!--android:layout_margin="15dp">-->

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="90dp"-->
            <!--android:layout_height="130dp"-->
            <!--android:background="#76923C">-->

            <!--<ImageView-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/grievance"-->
            <!--android:onClick="onGrievance"-->
            <!--android:src="@drawable/grievance1" />-->

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="90dp"-->
            <!--android:layout_height="129dp"-->
            <!--android:background="#E36C09"-->
            <!--android:layout_marginLeft="15dp"></LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="93dp"-->
            <!--android:layout_height="152dp"-->
            <!--android:background="#5F497A"-->
            <!--android:layout_rowSpan="2"-->
            <!--android:layout_marginTop="15dp"></LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="90dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:background="#538CD5"-->
            <!--android:layout_rowWeight="1"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:layout_marginBottom="15dp"></LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="90dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:background="#5F497A"-->
            <!--android:layout_marginLeft="15dp"></LinearLayout>-->

    <!--</GridLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="#3A661B"
            android:layout_weight="1"
            android:id="@+id/grievanceModule">

            <LinearLayout android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dip"
                android:layout_marginBottom="40dip"
                android:paddingRight="30dip"
                android:gravity="center_horizontal"
                android:layout_marginLeft="30dip">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/grievance"
                    android:src="@drawable/grievance1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/grv"
                    android:text="@string/grv"
                    android:layout_marginTop="10dip"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dip"
            android:background="#FF9800"
            android:layout_weight="1"
            android:layout_marginRight="20dp">

            <LinearLayout android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dip"
                android:layout_marginBottom="40dip"
                android:paddingRight="20dip"
                android:gravity="center_horizontal"
                android:layout_marginLeft="30dip">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/information"
                    android:src="@drawable/info31" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:id="@+id/infotxt"
                    android:layout_marginTop="10dip"/>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dip"
            android:background="#673AB7"
            android:layout_weight="1">

            <LinearLayout android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:layout_marginBottom="30dip"
                android:paddingRight="40dip"
                android:gravity="center_horizontal"
                android:layout_marginLeft="30dip" >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/service"
                    android:src="@drawable/file17" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/servicetxt"
                    android:text="@string/services"
                    android:layout_marginTop="10dip"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dip"
            android:background="@color/sky"
            android:id="@+id/layoutIdea"
            android:layout_weight="1"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_marginBottom="40dip"
                android:paddingRight="40dip"
                android:gravity="center_horizontal"
                android:layout_marginLeft="50dip"  >

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/idea"
                    android:onClick="onIdea"
                    android:src="@drawable/lights7" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/idea"
                    android:layout_marginTop="10dip"/>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>
</ScrollView>